# memLeakTrace

./: README.md
grpcAdaptor/: MMX_FLAGS_CU  Makefile  config.status  configure  configure.ac  configure.scan
grpcAdaptor/adaptor/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/adaptor/include/: GrpcAdpStru.h
grpcAdaptor/adaptor/objs/: Makefile  Makefile.am  Makefile.in  libGrpcAdaptor.la
grpcAdaptor/adaptor/objs/.deps/: libadaptor_a-GrpcAdp.Po  libadaptor_a-GrpcAdpCntrl.Po  libadaptor_a-GrpcAdpRpcClientThread.Po  libadaptor_a-GrpcAdpRpcServerThread.Po  libadaptor_a-GrpcAdpThreads.Po
grpcAdaptor/adaptor/objs/.libs/: libGrpcAdaptor.la  libGrpcAdaptor.lai
grpcAdaptor/adaptor/source/: GrpcAdp.cpp  GrpcAdpCntrl.cpp  GrpcAdpCntrl.h  GrpcAdpRpcClientThread.cpp  GrpcAdpRpcClientThread.h  GrpcAdpRpcServerThread.cpp  GrpcAdpRpcServerThread.h
grpcAdaptor/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
grpcAdaptor/common/: Makefile
grpcAdaptor/common/Service/: ServiceClientImpl.cpp  ServiceClientImpl.h  SvcLog.h
grpcAdaptor/common/objs/: Makefile
grpcAdaptor/common/objs/Service/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/services/: Makefile
grpcAdaptor/services/cucp/: Makefile
grpcAdaptor/services/cucp/objs/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/services/cucp/source/: CucpService.cpp  (+1 more)
grpcAdaptor/services/grpc/: srvCp.proto  srvEbm.proto  structure.proto
include/: EbmCfmCb.h  GrpcAdp.h  GrpcLog.h
src/: ebmCfmCb.c  new_4  testgrpc  testgrpc.c
test/: ebm-client  ebm-client.cc  ebm-server  ebm-server.cc  srvCp.grpc.pb.cc  srvCp.pb.h  srvEbm.pb.cc  srvEbm.pb.h  structure.pb.cc  structure.pb.h
(+24 files in other folders)
